agregando data a l proye

--- a/index.html
+++ b/index.html
@@ -1,77 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joyas Ignacia</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Sevillana&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="https://kit.fontawesome.com/01fa5b8d37.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Sevillana&family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/01fa5b8d37.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <nav class="navegacion">
-        <div>
-            <i class="fas fa-bars"></i>
-        </div>
-        <div><img src="./assets/img/logo.png" alt="Logo Joyas" class="logo"></div>
-        <div class="iconos-compras">
-            <i class="fas fa-shopping-bag"></i>
-            <i class="far fa-user"></i>
-        </div>
+      <div>
+        <i class="fas fa-bars"></i>
+      </div>
+      <div>
+        <img src="./assets/img/logo.png" alt="Logo Joyas" class="logo" />
+      </div>
+      <div class="iconos-compras">
+        <i class="fas fa-shopping-bag"></i>
+        <i class="far fa-user"></i>
+      </div>
     </nav>
     <header class="header">
-        <div class="texto-header">
-
-            <h1>Nueva <br>Colección</h1>
-            <p>Descubre lo recién llegado</p>
-            <button class="btn-ver-coleccion">Ver colección</button>
-        </div>
+      <div class="texto-header">
+        <h1>Nueva <br />Colección</h1>
+        <p>Descubre lo recién llegado</p>
+        <button class="btn-ver-coleccion">Ver colección</button>
+      </div>
     </header>
     <section class="banner-info container">
-        <div class="info">
-            <i class="fas fa-stamp"></i>
-            <p>Joyas con certificado</p>
-        </div>
-        <div class="info">
-            <i class="fas fa-dolly-flatbed"></i>
-            <p>Envios a todo Chile</p>
-        </div>
+      <div class="info">
+        <i class="fas fa-stamp"></i>
+        <p>Joyas con certificado</p>
+      </div>
+      <div class="info">
+        <i class="fas fa-dolly-flatbed"></i>
+        <p>Envios a todo Chile</p>
+      </div>
     </section>
-    <hr class="divider">
-    <section class="  container">
-    
-        <h2>Variedad en metal</h2>
-        <div class="card-joyas">
-
-            <div class="variedad-metal ">
-                <div>
-                    <p>Oro</p>
-                <img src="./assets/img/line44.png" alt=""></div>
-                <div><p>Plata</p></div>
-                <div><p>Acero</p></div>
-            </div>
-            <div class="card-img-joyas" >
-                <div class="card">
-                    <img src="./assets/img/image 148.png" alt="" class="logo">
-                    <p>Collares</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/image 148.png" alt="" class="logo">
-                    <p>Collares</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/image 148.png" alt="" class="logo">
-                    <p>Collares</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/image 148.png" alt="" class="logo">
-                    <p>Collares</p>
-                </div>
-            </div>
+    <hr class="divider" />
+    <section class="container">
+      <h2>Variedad en metal</h2>
+      <div class="card-joyas">
+        <div class="variedad-metal">
+          <div>
+            <p>Oro</p>
+            <img src="./assets/img/line44.png" alt="" />
+          </div>
+          <div><p>Plata</p></div>
+          <div><p>Acero</p></div>
         </div>
+        <div class="card-img-joyas">
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+          </div>
+        </div>
+      </div>
+      <div class="nueva-coleccion">
+        <h2>Nueva Colección</h2>
+        <div class="nueva-coleccion-card card-img-joyas">
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/img/image 148.png" alt="" class="logo" />
+            <p>Collares</p>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+        </div>
+        <div class="btn-ver-mas">
+          <button> Ver más</button>
+        </div>
+      </div>
     </section>
+  <article class="promo-collar-florencia">
+<div class="container">
+  <div class="collar-flo-uno">
 
-</body>
+    <img src="./assets/img/collar-florencia2.png" alt="">
+  </div>
+  <div class="collar-flo-dos">
+    <img src="./assets/img/collar-florencia.png" alt="">
+  </div>
+  <div class="descri-promo">
+    <h2>Collar Florencia</h2>
+    <p>Destacado nueva colección</p>
+    <h3>$680.000</h3>
+    <div class="btn-descri-flo">
+      <button class="btn-ver-mas"> Ver más</button>
+      <button class="btn-agregar">Agregar</button>
+    </div>
+
+  </div>
+</div>
+  </article>
+  <article class="en-oferta">
+    <div class="container">
+      <h2>En Oferta</h2>
+      <div class=" nueva-coleccion-card card-img-joyas">
+        <div class="card">
+          <img src="./assets/img/image 148.png" alt="" class="logo" />
+          <p>Collares</p>
+          <div>
+            <span>$885.000</span>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/img/image 148.png" alt="" class="logo" />
+          <p>Collares</p>
+          <div>
+            <span>$885.000</span>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/img/image 148.png" alt="" class="logo" />
+          <p>Collares</p>
+          <div>
+            <span>$885.000</span>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/img/image 148.png" alt="" class="logo" />
+          <p>Collares</p>
+          <div>
+            <span>$885.000</span>
+            <div class="precio-carrito">
+              <h6>$ 211.000</h6>
+              <i class="far fa-credit-card"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="btn-ver-mas">
+        <button> Ver más</button>
+      </div>
+    </div>
+  </article>
+  </body>
 </html>
