--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p>Collares</p>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
           <div class="card">
@@ -101,7 +101,7 @@
             <p>Collares</p>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
           <div class="card">
@@ -109,7 +109,7 @@
             <p>Collares</p>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
           <div class="card">
@@ -117,7 +117,7 @@
             <p>Collares</p>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
           <div class="card">
@@ -125,7 +125,7 @@
             <p>Collares</p>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
         </div>
@@ -166,7 +166,7 @@
             <span>$885.000</span>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
             <span>$885.000</span>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <span>$885.000</span>
             <div class="precio-carrito">
               <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+              <i class="fas fa-shopping-bag"></i>
             </div>
           </div>
         </div>
