--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
   </head>
   <body>
     <nav class="navegacion">
-      <div>
+      <div class="hamburguesa">
         <i class="fas fa-bars"></i>
       </div>
       <div>
         <img src="./assets/img/logo.png" alt="Logo Joyas" class="logo" />
+      </div>
+      <div class="links-nav">
+        <ul>
+          <li>Inicio</li>
+          <li>Mi visión</li>
+          <li>Nueva colección</li>
+          <li>Oferta</li>
+          <li>Contactanos</li>
+        </ul>
       </div>
       <div class="iconos-compras">
         <i class="fas fa-shopping-bag"></i>
@@ -130,84 +139,149 @@
           </div>
         </div>
         <div class="btn-ver-mas">
-          <button> Ver más</button>
+          <button>Ver más</button>
         </div>
       </div>
     </section>
-  <article class="promo-collar-florencia">
-<div class="container">
-  <div class="collar-flo-uno">
-
-    <img src="./assets/img/collar-florencia2.png" alt="">
-  </div>
-  <div class="collar-flo-dos">
-    <img src="./assets/img/collar-florencia.png" alt="">
-  </div>
-  <div class="descri-promo">
-    <h2>Collar Florencia</h2>
-    <p>Destacado nueva colección</p>
-    <h3>$680.000</h3>
-    <div class="btn-descri-flo">
-      <button class="btn-ver-mas"> Ver más</button>
-      <button class="btn-agregar">Agregar</button>
+    <div class="promos">
+      <article class="promo-collar-florencia">
+        <div class="container">
+          <div class="collar-flo-uno">
+            <img src="./assets/img/collar-florencia2.png" alt="" />
+          </div>
+          <div class="collar-flo-dos">
+            <img src="./assets/img/collar-florencia.png" alt="" />
+          </div>
+          <div class="descri-promo">
+            <h2>Collar Florencia</h2>
+            <p>Destacado nueva colección</p>
+            <h3>$680.000</h3>
+            <div class="btn-descri-flo">
+              <button class="btn-ver-mas">Ver más</button>
+              <button class="btn-agregar">Agregar</button>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="en-oferta">
+        <div class="container">
+          <h2>En Oferta</h2>
+          <div class="nueva-coleccion-card card-img-joyas">
+            <div class="card">
+              <img src="./assets/img/image 148.png" alt="" class="logo" />
+              <p>Collares</p>
+              <div>
+                <span>$885.000</span>
+                <div class="precio-carrito">
+                  <h6>$ 211.000</h6>
+                  <i class="fas fa-shopping-bag"></i>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./assets/img/image 148.png" alt="" class="logo" />
+              <p>Collares</p>
+              <div>
+                <span>$885.000</span>
+                <div class="precio-carrito">
+                  <h6>$ 211.000</h6>
+                  <i class="fas fa-shopping-bag"></i>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./assets/img/image 148.png" alt="" class="logo" />
+              <p>Collares</p>
+              <div>
+                <span>$885.000</span>
+                <div class="precio-carrito">
+                  <h6>$ 211.000</h6>
+                  <i class="fas fa-shopping-bag"></i>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./assets/img/image 148.png" alt="" class="logo" />
+              <p>Collares</p>
+              <div>
+                <span>$885.000</span>
+                <div class="precio-carrito">
+                  <h6>$ 211.000</h6>
+                  <i class="far fa-credit-card"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-ver-mas">
+            <button>Ver más</button>
+          </div>
+        </div>
+      </article>
     </div>
+    <section class="contacto">
+      <div class="container">
+        <h2>No dudes en contactarnos</h2>
+        <p>Envianos tus preguntas e intentaremos responderte a la brevedad.</p>
+        <div class="form-contacto">
+          <div>
+            <input
+              type="text"
+              name="nombre-joya"
+              id="NombreJoya"
+              placeholder="Nombre de la joya"
+            />
+            <input
+              type="text"
+              name="nombre"
+              id="NombreContacto"
+              placeholder="Tu nombre*"
+            />
+            <input
+              type="email"
+              name="email"
+              id="EmailContacto"
+              placeholder="Correo"
+            />
+            <textarea
+              name="mensaje"
+              id="MensajeContaco"
+              placeholder="Mensaje"
+              rows="5"
+              class="textarea"
+            ></textarea>
+          </div>
 
-  </div>
-</div>
-  </article>
-  <article class="en-oferta">
-    <div class="container">
-      <h2>En Oferta</h2>
-      <div class=" nueva-coleccion-card card-img-joyas">
-        <div class="card">
-          <img src="./assets/img/image 148.png" alt="" class="logo" />
-          <p>Collares</p>
-          <div>
-            <span>$885.000</span>
-            <div class="precio-carrito">
-              <h6>$ 211.000</h6>
-              <i class="fas fa-shopping-bag"></i>
-            </div>
-          </div>
+          <button>ENVIAR</button>
         </div>
-        <div class="card">
-          <img src="./assets/img/image 148.png" alt="" class="logo" />
-          <p>Collares</p>
-          <div>
-            <span>$885.000</span>
-            <div class="precio-carrito">
-              <h6>$ 211.000</h6>
-              <i class="fas fa-shopping-bag"></i>
-            </div>
-          </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container footer-des">
+        <div>
+          <img src="./assets/img/logo.png" alt="Logo" class="logo" />
+          <p class="descri-footer">
+            Mi sitio en línea presenta una exquisita colección de joyas
+            cuidadosamente seleccionadas, desde deslumbrantes diamantes hasta
+            piezas únicas de diseñadores.
+          </p>
         </div>
-        <div class="card">
-          <img src="./assets/img/image 148.png" alt="" class="logo" />
-          <p>Collares</p>
-          <div>
-            <span>$885.000</span>
-            <div class="precio-carrito">
-              <h6>$ 211.000</h6>
-              <i class="fas fa-shopping-bag"></i>
+        <div class="info-contacto">
+          <h4>CONTACTO</h4>
+          <div class="">
+            <div class="redes">
+              <i class="fab fa-instagram"></i>
+              <p>julieta_joyas</p>
             </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./assets/img/image 148.png" alt="" class="logo" />
-          <p>Collares</p>
-          <div>
-            <span>$885.000</span>
-            <div class="precio-carrito">
-              <h6>$ 211.000</h6>
-              <i class="far fa-credit-card"></i>
+            <div class="redes">
+              <i class="far fa-envelope"></i>
+              <p>contacto@julietajoyas.cl</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="btn-ver-mas">
-        <button> Ver más</button>
+      <div class="derechos-footer">
+        <p class="container">&copy; Todos los derechos reservados</p>
       </div>
-    </div>
-  </article>
+    </footer>
   </body>
 </html>
