fix redes sociales

--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
         <i class="fas fa-bars"></i>
       </div>
       <div>
-        <img src="./assets/img/logo.png" alt="Logo Joyas" class="logo" />
+        <a href="#">
+          <img src="./assets/img/logo.png" alt="Logo Joyas" class="logo" />
+        </a>
       </div>
       <div class="links-nav">
         <ul>
-          <li>Inicio</li>
-          <li>Mi visión</li>
-          <li>Nueva colección</li>
-          <li>Oferta</li>
-          <li>Contactanos</li>
+          <li><a class="nav-link" href="#Inicio">Inicio</a></li>
+          <li><a class="nav-link" href="#MiVision">Mi visión</a></li>
+          <li>
+            <a class="nav-link" href="#NuevaColeccion">Nueva colección</a>
+          </li>
+          <li><a class="nav-link" href="#Oferta">Oferta</a></li>
+          <li><a class="nav-link" href="#Contacto">Contáctanos</a></li>
         </ul>
       </div>
       <div class="iconos-compras">
@@ -86,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="nueva-coleccion">
+      <div class="nueva-coleccion" id="NuevaColeccion">
         <h2>Nueva Colección</h2>
         <div class="nueva-coleccion-card card-img-joyas">
           <div class="card">
@@ -163,7 +167,7 @@
           </div>
         </div>
       </article>
-      <article class="en-oferta">
+      <article class="en-oferta" id="Oferta">
         <div class="container">
           <h2>En Oferta</h2>
           <div class="nueva-coleccion-card card-img-joyas">
@@ -218,7 +222,7 @@
         </div>
       </article>
     </div>
-    <section class="contacto">
+    <section class="contacto" id="Contacto">
       <div class="container">
         <h2>No dudes en contactarnos</h2>
         <p>Envianos tus preguntas e intentaremos responderte a la brevedad.</p>
@@ -269,7 +273,9 @@
           <h4>CONTACTO</h4>
           <div class="">
             <div class="redes">
-              <i class="fab fa-instagram"></i>
+              <a href="https://www.instagram.com/">
+                <i class="fab fa-instagram"></i>
+              </a>
               <p>julieta_joyas</p>
             </div>
             <div class="redes">
